// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CNavGroup customize 1`] = `
<div>
  <li
    class="nav-group show bazinga"
  >
    <a
      class="nav-link nav-group-toggle"
    >
      anchorText
    </a>
    <ul
      class="nav-group-items"
      style="display: block;"
    />
  </li>
</div>
`;

exports[`loads and displays CNavGroup component 1`] = `
<div>
  <li
    class="nav-group"
  >
    <a
      class="nav-link nav-group-toggle"
    >
      anchorText
    </a>
    <ul
      class="nav-group-items"
    />
  </li>
</div>
`;
